cluster/platforms/rabbitmq/crs/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rabbitmq-management
  namespace: rabbitmq
spec:
  hosts:
  - mqtt.${domain_name}
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: rabbitmq.rabbitmq.svc.cluster.local
        port:
          number: 15672
    match:
    - authority:
        exact: mqtt.${domain_name}
      uri:
        prefix: /
